objects/OrgGroup__c.object
<CustomObject>
    <description>Identifies a fundamental framework or collection of entities, assets. people, processes etc. which are related for administrative purposes in Force.com. (example of use cases: identify a Sales Area grouping of master data from SAP; identify metadata asset grouping for a CRM Program; identify security asset grouping used for a program sharing model, etc.)</description>
    <fields>
        <fullName>Account_Rule__c</fullName>
        <description>These values drive the business logic to determine which  ERP Customer to create new accounts  The Account group on ERP Customer is where these values are compared.</description>
        <inlineHelpText>These values drive the business logic to determine which  ERP Customer to create new accounts  The Account group on ERP Customer is where these values are compared.</inlineHelpText>
        <label>Account Rule</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Reference Customer</fullName>
                </value>
                <value>
                    <fullName>Z001 ( Sold-to party )</fullName>
                </value>
                <value>
                    <fullName>Z002 (Ship-to party)</fullName>
                </value>
                <value>
                    <fullName>Z003 (Payer)</fullName>
                </value>
                <value>
                    <fullName>Z004 (Bill-to party)</fullName>
                </value>
                <value>
                    <fullName>Z012 (Hierarchy node)</fullName>
                </value>
                <value>
                    <fullName>Z100 (Plant/Distribution Ctr)</fullName>
                </value>
                <value>
                    <fullName>ZCOA (COA Recipient)</fullName>
                </value>
                <value>
                    <fullName>ZCPD (One-time cust.(int.no.)</fullName>
                </value>
                <value>
                    <fullName>ZCSR (Customer Service Rep)</fullName>
                </value>
                <value>
                    <fullName>ZEND (End User)</fullName>
                </value>
                <value>
                    <fullName>ZEXC ( Sold-to party )</fullName>
                </value>
                <value>
                    <fullName>ZISS Intrasub sale @ mkt price</fullName>
                </value>
                <value>
                    <fullName>ZLOG (Port)</fullName>
                </value>
                <value>
                    <fullName>ZMAR (Marine partner)</fullName>
                </value>
                <value>
                    <fullName>ZSRP (Sales Representative)</fullName>
                </value>
                <value>
                    <fullName>ZSUB (Dupont Subsidiary)</fullName>
                </value>
                <value>
                    <fullName>ZZ-Field not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Used to define the Business Name and link Sales Area to this record.</description>
        <label>Business</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <description>Owning Business of this record</description>
        <label>Owning Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>DuPont Chemicals &amp; Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>DuPont Sustainable Solutions</fullName>
                </value>
                <value>
                    <fullName>Electronics and Communications</fullName>
                </value>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Performance Coatings</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Pioneer</fullName>
                </value>
                <value>
                    <fullName>Solae</fullName>
                </value>
                <value>
                    <fullName>DuPont Titanium Technologies</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <description>The DuPont organization that owns this record, should be a combination of the accepted abbreviations of SBU(Strategic Business Unit)-BU(Business Unit)-SubBU(Business or Product Line).</description>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-COZR</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Carpet Backing</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Fire Safety</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-Admin General</fullName>
                </value>
                <value>
                    <fullName>CORP-Core</fullName>
                </value>
                <value>
                    <fullName>CORP-Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>CORP-Non-Aligned</fullName>
                </value>
                <value>
                    <fullName>CORS</fullName>
                </value>
                <value>
                    <fullName>CORS-Aviation</fullName>
                </value>
                <value>
                    <fullName>CORS-Corp Remediation</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>CORS-Public Affairs</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DA-Nano LLC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Hierarchy_Level__c</fullName>
        <description>This will store the PH level used for Approval routing</description>
        <label>Product Hierarchy Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Level__c</fullName>
        <description>This will store the Profit Center level used for Approval routing</description>
        <label>Profit Center Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Floor_Pricing__c</fullName>
        <label>Regional Floor Pricing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sys_Id__c</fullName>
        <label>Sys Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>To identify the type of Organizational Group record this is</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Organizational Group</label>
    <listViews>
        <fullName>All_Business</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>Owning_Org__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.Business</value>
        </filters>
        <label>All Business</label>
    </listViews>
    <listViews>
        <fullName>All_Sales_AreaBI_AP_Surfaces</fullName>
        <columns>ERP_Sales_Org__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>ERP_Sales_Org_Code__c</columns>
        <columns>ERP_Distribution_Channel_Code__c</columns>
        <columns>ERP_Division_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.ERP_Sales_Area</value>
        </filters>
        <filters>
            <field>ERP_Division_Code__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <filters>
            <field>ERP_Sales_Org_Code__c</field>
            <operation>equals</operation>
            <value>A603,A618,A629,A642,A64A,A64B,A674,A680</value>
        </filters>
        <label>All_Sales Area_BI AP_Surfaces</label>
    </listViews>
    <listViews>
        <fullName>Sales_Area_ALL</fullName>
        <columns>ERP_Sales_Org__c</columns>
        <columns>NAME</columns>
        <columns>ERP_Sales_Org_Code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>ERP_Distribution_Channel_Code__c</columns>
        <columns>ERP_Division_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OrgGroup__c.ERP_Sales_Area</value>
        </filters>
        <label>Sales Area_ALL</label>
    </listViews>
    <nameField>
        <displayFormat>OG-{0000000000}</displayFormat>
        <label>Org Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Groups</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>The DuPont Business (Business Unit) or legal entity</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>ERP_Sales_Area</fullName>
        <active>true</active>
        <description>ERP Sales Area as per SAP (Sales Org, Distribution Channel, Division)</description>
        <label>ERP Sales Area</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>